--- a/entry.html
+++ b/entry.html
@@ -45,8 +45,8 @@
     <link href='//fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="material.min.css">
-    <link rel="stylesheet" href="../spacing.css">
+    <link rel="stylesheet" href="css/aterial.min.css">
+    <link rel="stylesheet" href="spacing.css">
     <link rel="stylesheet" href="styles.css">
     <style>
     #view-source {
@@ -186,6 +186,6 @@
       <div class="mdl-layout__obfuscator"></div>
     </div>
     <a href="https://github.com/google/material-design-lite/blob/master/templates/blog/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
-    <script src="../../material.min.js"></script>
+    <script src="js/material.min.js"></script>
   </body>
 </html>
