--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       z-index: 900;
     }
     </style>
-	<!-- jQuery -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<!-- Parse.js -->
-    <script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+  	<!-- jQuery -->
+  	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  	<!-- Parse.js -->
+    <script src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
   </head>
   <body>
     <div class="demo-blog mdl-layout mdl-js-layout has-drawer is-upgraded">
